[add] varios cambios de estilo y contenido

--- a/components/button/_button-style.sass
+++ b/components/button/_button-style.sass
@@ -18,7 +18,7 @@
 		&:hover
 			background: var(--background-button-cta-hover)
 		&-text
-			@include text-gradient-main(var(--color-text-cta-gradient), var(--color-text-cta))
+			color: var(--color-text-cta)
 	&-side
 		background: var(--background-button-side)
 		color: $color-accent-white
