--- a/components/feature/_feature-style.sass
+++ b/components/feature/_feature-style.sass
@@ -1,7 +1,9 @@
 @use '../../styles/tokens' as *
 
 .feature-content-big
+	background: var(--background-section)
 	width: 324px
+	padding: 120px 0
 	display: grid
 	grid-auto-flow: column
 	column-gap: 24px
