--- a/components/section/_section-style.sass
+++ b/components/section/_section-style.sass
@@ -21,8 +21,8 @@
 
 .section-title
 	color: var(--color-text-title)
-	&-gradient
-		@include text-gradient-main($gradient-main, transparent)
+	&-color
+		color: var(--color-text-title)
 	margin: 0 auto
 	+text-style-h2
 	+breakpoint-mobile
