--- a/styles/tokens/_backgrounds.sass
+++ b/styles/tokens/_backgrounds.sass
@@ -1,16 +1,4 @@
 @use 'colors' as *
 
-.background-sea
-	background-image: var(--background-color-a)
-
 .background-main
-	background-image: var(--background-color-b)
-	background-size: 100% 500px
-	background-repeat: no-repeat
-	// background-blend-mode: multiply, normal
-
-.background-blur
-	background: rgba($color-accent-white, .01)
-	backdrop-filter: blur(150px)
-	-webkit-backdrop-filter: blur(150px)
-	-moz-backdrop-filter: blur(150px)
+	background-color: var(--background-color)
