--- a/components/header-main/header-main-style.sass
+++ b/components/header-main/header-main-style.sass
@@ -45,7 +45,7 @@
 		
 .logo
 	font-size: $font-size-20px
-	font-weight: $font-semibold
+	font-weight: $font-medium
 	letter-spacing: -.04em
 	a
 		color: $color-dark-90
