--- a/components/hero/_hero-style.sass
+++ b/components/hero/_hero-style.sass
@@ -2,10 +2,10 @@
     
 .hero-content
 	width: 100%
-	padding: 4em 0 //De 14px
+	padding: 10em 0 //de 14px
 	display: grid
 	grid-auto-flow: row
-	row-gap: 4em //Ver si se cambia a 40px o 3em
+	row-gap: 6em //de 14
 	justify-items: center
 	+breakpoint-mobile
 		margin-top: 2em
@@ -13,7 +13,7 @@
 	text-align: center
 	display: grid
 	grid-auto-flow: row
-	row-gap: 1.2em //De 14 será 16.8?
+	row-gap: 3em //de 14
 	// +breakpoint-tablet // Legacy
 	// 	width: 90%
 	// +breakpoint-mobile
@@ -30,10 +30,10 @@
 		row-gap: .75em
 .hero-title
 	margin: 0 auto
-	color: var(--color-text-hero)
-	+text-style-h1
-	&-gradient
-		@include text-gradient-main(var(--color-text-main-gradient), var(--color-text-main))
+	color: var(--color-text-title)
+	@include text-style-h1
+	&-color
+		color: var(--color-text-title-high)
 	+breakpoint-mobile
 		+text-style-h1-small
 .hero-description
