--- a/components/section/_section-style.sass
+++ b/components/section/_section-style.sass
@@ -1,17 +1,18 @@
 @use '../../styles/tokens' as *
 
 .section-container
-	background: var(--background-section)
 	display: grid
 	grid-auto-flow: row
-	row-gap: 120px
+	row-gap: 40px
 	padding: 120px 0
 	border-radius: 40px
-	border: 1px solid var(--border)
 	+breakpoint-tablet
 		border-radius: 20px 20px 0 0
 		padding: 56px 0
 		row-gap: 56px
+	&-background
+		background: var(--background-section)
+		border: 1px solid var(--border)
 
 .section-group-texts
 	text-align: center
@@ -34,7 +35,6 @@
 	color: var(--color-text-body)
 	+breakpoint-mobile
 		max-width: 260px
-		+text-style-body-small
 
 .features-group
 	display: grid
