--- a/styles/tokens/_fonts.sass
+++ b/styles/tokens/_fonts.sass
@@ -93,12 +93,6 @@ $font-size-90px: 90px
 	line-height: 1.6em
 	// description
 
-@mixin text-style-body-small
-	font-size: $font-size-base
-	font-weight: $font-medium
-	font-style: normal
-	line-height: 1.6em
-
 @mixin text-style-buttons
 	font-size: $font-size-18px
 	font-weight: $font-medium
@@ -116,3 +110,9 @@ $font-size-90px: 90px
 	font-weight: $font-medium
 	font-style: normal
 	line-height: 1.5em
+
+@mixin text-style-note
+	font-size: $font-size-base
+	font-weight: $font-regular
+	font-style: normal
+	line-height: 1.6em
